feat(grid): complete QoL features + refactoring
- Japanese IME support with multi-char split (insert-and-push)
- Section management: Ctrl+Enter, Ctrl+Shift+Enter, Enter (break)
- Force delete: Ctrl+Backspace
- Hide border on filled boxes (excludes blank spaces)
- Default: 1 box, 8mm size

Refactored:
- Extracted utils/gridFocus.ts (focus helpers)
- Extracted hooks/useGridSections.ts (CRUD operations)
- GridItem.tsx reduced 43% (581 -> 330 lines)

Also includes:
- Updated .gitignore for SQLite prep
- Canvas API docs and context files
- Workflow documentation